# api/server/v1/api.swagger.json
@@ -52,7 +52,7 @@
             "type": "string"
           },
           {
-            "name": "auth",
+            "name": "body",
             "description": "请求体",
             "in": "body",
             "required": true,
@@ -92,7 +92,7 @@
             "type": "string"
           },
           {
-            "name": "auth",
+            "name": "body",
             "description": "请求体",
             "in": "body",
             "required": true,
@@ -165,7 +165,6 @@
             "in": "body",
             "required": true,
             "schema": {
-              "type": "object",
               "properties": {}
             }
           }
@@ -215,7 +214,7 @@
             "type": "string"
           },
           {
-            "name": "auth",
+            "name": "body",
             "description": "请求体",
             "in": "body",
             "required": true,
@@ -255,7 +254,7 @@
             "type": "string"
           },
           {
-            "name": "auth",
+            "name": "body",
             "description": "请求体",
             "in": "body",
             "required": true,
@@ -290,7 +289,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -298,7 +297,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -306,7 +305,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -435,7 +434,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -501,7 +500,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -509,7 +508,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -517,7 +516,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -709,7 +708,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -779,7 +778,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -819,7 +818,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -864,6 +863,37 @@
         ]
       }
     },
+    "/v1/domains/{name}/name": {
+      "get": {
+        "summary": "获取领域",
+        "operationId": "Api_GetDomainName",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1Domain"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Api"
+        ]
+      }
+    },
     "/v1/menus": {
       "get": {
         "summary": "菜单模块\n列表菜单",
@@ -885,7 +915,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -893,7 +923,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -901,7 +931,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -1030,7 +1060,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1096,7 +1126,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1104,7 +1134,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1112,7 +1142,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -1241,7 +1271,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1281,7 +1311,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1315,7 +1345,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1323,7 +1353,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1331,7 +1361,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -1394,7 +1424,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1402,7 +1432,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1410,7 +1440,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -1508,7 +1538,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1542,7 +1572,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1550,7 +1580,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1558,7 +1588,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -1687,7 +1717,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1757,7 +1787,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1797,7 +1827,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1837,7 +1867,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -1871,7 +1901,7 @@
         "parameters": [
           {
             "name": "page",
-            "description": "当前页",
+            "description": "当前页.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1879,7 +1909,7 @@
           },
           {
             "name": "pageSize",
-            "description": "每一页的行数",
+            "description": "每一页的行数.",
             "in": "query",
             "required": false,
             "type": "integer",
@@ -1887,7 +1917,7 @@
           },
           {
             "name": "nopaging",
-            "description": "是否不分页",
+            "description": "是否不分页.",
             "in": "query",
             "required": false,
             "type": "boolean"
@@ -2310,7 +2340,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -2350,7 +2380,7 @@
             "format": "uint64"
           },
           {
-            "name": "data",
+            "name": "body",
             "in": "body",
             "required": true,
             "schema": {
@@ -2425,12 +2455,16 @@
     "protobufAny": {
       "type": "object",
       "properties": {
-        "@type": {
+        "typeUrl": {
           "type": "string",
           "description": "A URL/resource name that uniquely identifies the type of the serialized\nprotocol buffer message. This string must contain at least\none \"/\" character. The last segment of the URL's path must represent\nthe fully qualified name of the type (as in\n`path/google.protobuf.Duration`). The name should be in a canonical form\n(e.g., leading \".\" is not accepted).\n\nIn practice, teams usually precompile into the binary all types that they\nexpect it to use in the context of Any. However, for URLs which use the\nscheme `http`, `https`, or no scheme, one can optionally set up a type\nserver that maps type URLs to message definitions as follows:\n\n* If no scheme is provided, `https` is assumed.\n* An HTTP GET on the URL must yield a [google.protobuf.Type][]\n  value in binary format, or produce an error.\n* Applications are allowed to cache lookup results based on the\n  URL, or have them precompiled into a binary to avoid any\n  lookup. Therefore, binary compatibility needs to be preserved\n  on changes to types. (Use versioned type names to manage\n  breaking changes.)\n\nNote: this functionality is not currently available in the official\nprotobuf release, and it is not used for type URLs beginning with\ntype.googleapis.com.\n\nSchemes other than `http`, `https` (or the empty scheme) might be\nused with implementation specific semantics."
+        },
+        "value": {
+          "type": "string",
+          "format": "byte",
+          "description": "Must be a valid serialized protocol buffer of the above specified type."
         }
       },
-      "additionalProperties": {},
       "description": "`Any` contains an arbitrary serialized protocol buffer message along with a\nURL that describes the type of the serialized message.\n\nProtobuf library provides support to pack/unpack Any values in the form\nof utility functions or additional generated methods of the Any type.\n\nExample 1: Pack and unpack a message in C++.\n\n    Foo foo = ...;\n    Any any;\n    any.PackFrom(foo);\n    ...\n    if (any.UnpackTo(\u0026foo)) {\n      ...\n    }\n\nExample 2: Pack and unpack a message in Java.\n\n    Foo foo = ...;\n    Any any = Any.pack(foo);\n    ...\n    if (any.is(Foo.class)) {\n      foo = any.unpack(Foo.class);\n    }\n\nExample 3: Pack and unpack a message in Python.\n\n    foo = Foo(...)\n    any = Any()\n    any.Pack(foo)\n    ...\n    if any.Is(Foo.DESCRIPTOR):\n      any.Unpack(foo)\n      ...\n\nExample 4: Pack and unpack a message in Go\n\n     foo := \u0026pb.Foo{...}\n     any, err := anypb.New(foo)\n     if err != nil {\n       ...\n     }\n     ...\n     foo := \u0026pb.Foo{}\n     if err := any.UnmarshalTo(foo); err != nil {\n       ...\n     }\n\nThe pack methods provided by protobuf library will by default use\n'type.googleapis.com/full.type.name' as the type URL and the unpack\nmethods only use the fully qualified type name after the last '/'\nin the type URL, for example \"foo.bar.com/x/y.z\" will yield type\nname \"y.z\".\n\n\nJSON\n\nThe JSON representation of an `Any` value uses the regular\nrepresentation of the deserialized, embedded message, with an\nadditional field `@type` which contains the type URL. Example:\n\n    package google.profile;\n    message Person {\n      string first_name = 1;\n      string last_name = 2;\n    }\n\n    {\n      \"@type\": \"type.googleapis.com/google.profile.Person\",\n      \"firstName\": \u003cstring\u003e,\n      \"lastName\": \u003cstring\u003e\n    }\n\nIf the embedded message type is well-known and has a custom JSON\nrepresentation, that representation will be embedded adding a field\n`value` which holds the custom JSON in addition to the `@type`\nfield. Example (for message [google.protobuf.Duration][]):\n\n    {\n      \"@type\": \"type.googleapis.com/google.protobuf.Duration\",\n      \"value\": \"1.212s\"\n    }"
     },
     "protobufDeptState": {
@@ -2966,8 +3000,7 @@
           "$ref": "#/definitions/protobufRoleState"
         },
         "remarks": {
-          "type": "string",
-          "title": "repeated uint64 menus = 7 [(validate.rules).repeated = {min_items: 0, unique: true, items: {uint64: {gt: 0}}}];"
+          "type": "string"
         }
       },
       "title": "请求 - 创建角色"
@@ -4294,8 +4327,7 @@
           "$ref": "#/definitions/protobufRoleState"
         },
         "remarks": {
-          "type": "string",
-          "title": "repeated uint64 menus = 7 [(validate.rules).repeated = {min_items: 0, unique: true, items: {uint64: {gt: 0}}}];"
+          "type": "string"
         }
       }
     },
