# api/server/v1/api_http.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.5.3
+// - protoc-gen-go-http v2.4.0
 // - protoc             v3.21.5
 // source: server/v1/api.proto
 
@@ -40,6 +40,7 @@ const OperationApiExistUserName = "/api.server.v1.Api/ExistUserName"
 const OperationApiGetDept = "/api.server.v1.Api/GetDept"
 const OperationApiGetDomain = "/api.server.v1.Api/GetDomain"
 const OperationApiGetDomainCode = "/api.server.v1.Api/GetDomainCode"
+const OperationApiGetDomainName = "/api.server.v1.Api/GetDomainName"
 const OperationApiGetMenu = "/api.server.v1.Api/GetMenu"
 const OperationApiGetPost = "/api.server.v1.Api/GetPost"
 const OperationApiGetResource = "/api.server.v1.Api/GetResource"
@@ -84,131 +85,67 @@ const OperationApiUpdateRoleState = "/api.server.v1.Api/UpdateRoleState"
 const OperationApiUpdateUser = "/api.server.v1.Api/UpdateUser"
 
 type ApiHTTPServer interface {
-	// CreateDept 创建部门
 	CreateDept(context.Context, *CreateDeptReq) (*CreateDeptReply, error)
-	// CreateDomain 创建领域
 	CreateDomain(context.Context, *CreateDomainReq) (*CreateDomainReply, error)
-	// CreateMenu 创建菜单
 	CreateMenu(context.Context, *CreateMenuReq) (*CreateMenuReply, error)
-	// CreatePost 创建职位
 	CreatePost(context.Context, *CreatePostReq) (*CreatePostReply, error)
-	// CreateResource 创建资源
 	CreateResource(context.Context, *CreateResourceReq) (*CreateResourceReply, error)
-	// CreateRole 创建角色
 	CreateRole(context.Context, *CreateRoleReq) (*CreateRoleReply, error)
-	// CreateUser 创建用户
 	CreateUser(context.Context, *CreateUserReq) (*CreateUserReply, error)
-	// DeleteDept 删除部门
 	DeleteDept(context.Context, *DeleteDeptReq) (*DeleteDeptReply, error)
-	// DeleteDomain 删除领域
 	DeleteDomain(context.Context, *DeleteDomainReq) (*DeleteDomainReply, error)
-	// DeleteMenu 删除菜单
 	DeleteMenu(context.Context, *DeleteMenuReq) (*DeleteMenuReply, error)
-	// DeletePost 删除职位
 	DeletePost(context.Context, *DeletePostReq) (*DeletePostReply, error)
-	// DeleteResource 删除资源
 	DeleteResource(context.Context, *DeleteResourceReq) (*DeleteResourceReply, error)
-	// DeleteRole 删除角色
 	DeleteRole(context.Context, *DeleteRoleReq) (*DeleteRoleReply, error)
-	// DeleteUser 删除用户
 	DeleteUser(context.Context, *DeleteUserReq) (*DeleteUserReply, error)
-	// EmailLogin 邮件登陆
 	EmailLogin(context.Context, *EmailLoginReq) (*LoginReply, error)
-	// ExistUserName 验证用户名是否存在
 	ExistUserName(context.Context, *ExistUserNameReq) (*ExistUserNameReply, error)
-	// GetDept 获取部门
 	GetDept(context.Context, *GetDeptReq) (*Dept, error)
-	// GetDomain 获取领域
 	GetDomain(context.Context, *GetDomainReq) (*Domain, error)
-	// GetDomainCode 获取领域
 	GetDomainCode(context.Context, *GetDomainCodeReq) (*Domain, error)
-	// GetMenu 获取菜单
+	GetDomainName(context.Context, *GetDomainNameReq) (*Domain, error)
 	GetMenu(context.Context, *GetMenuReq) (*Menu, error)
-	// GetPost 获取职位
 	GetPost(context.Context, *GetPostReq) (*Post, error)
-	// GetResource 获取资源
 	GetResource(context.Context, *GetResourceReq) (*Resource, error)
-	// GetRole 获取角色
 	GetRole(context.Context, *GetRoleReq) (*Role, error)
-	// GetUser 获取用户
 	GetUser(context.Context, *GetUserReq) (*User, error)
-	// GetUserInfo User 用户模块
-	// 当前登录用户概述
 	GetUserInfo(context.Context, *emptypb.Empty) (*GetUserInfoReply, error)
-	// GetUserProfile 当前登录用户概述
 	GetUserProfile(context.Context, *emptypb.Empty) (*GetUserProfileReply, error)
-	// HandleDomainMenu 处理角色菜单
 	HandleDomainMenu(context.Context, *HandleDomainMenuReq) (*HandleDomainMenuReply, error)
-	// HandleRoleMenu 处理角色菜单
 	HandleRoleMenu(context.Context, *HandleRoleMenuReq) (*HandleRoleMenuReply, error)
-	// HandleRoleResource 处理角色资源
 	HandleRoleResource(context.Context, *HandleRoleResourceReq) (*HandleRoleResourceReply, error)
-	// HandleUserRole 绑定用户领域权限
 	HandleUserRole(context.Context, *HandleUserRoleReq) (*HandleUserRoleReply, error)
-	// ListDept 列表部门
 	ListDept(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListDeptTree 获取全部部门树形
 	ListDeptTree(context.Context, *ListDeptTreeReq) (*ListDeptTreeReply, error)
-	// ListDomain 列表领域
 	ListDomain(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListDomainMenu 获取角色菜单
 	ListDomainMenu(context.Context, *ListDomainMenuReq) (*ListDomainMenuReply, error)
-	// ListDomainTree 获取领域树形列表
 	ListDomainTree(context.Context, *ListDomainTreeReq) (*ListDomainTreeReply, error)
-	// ListMenu 菜单模块
-	// 列表菜单
 	ListMenu(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListMenuTree 获取树形菜单
 	ListMenuTree(context.Context, *ListMenuTreeReq) (*ListMenuTreeReply, error)
-	// ListPost 列表职位
 	ListPost(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListResource 资源模块
-	// 列表资源
 	ListResource(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListResourceGroup 列表资源-分组
 	ListResourceGroup(context.Context, *protobuf.PagingReq) (*ListResourceGroupReply, error)
-	// ListRole 角色模块
-	// 列表角色
 	ListRole(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListRoleMenu 获取角色菜单
 	ListRoleMenu(context.Context, *ListRoleMenuReq) (*ListRoleMenuReply, error)
-	// ListUser 列表用户
 	ListUser(context.Context, *protobuf.PagingReq) (*protobuf.PagingReply, error)
-	// ListUserRole 当前登录用户拥有角色
 	ListUserRole(context.Context, *emptypb.Empty) (*ListUserRoleReply, error)
-	// ListUserRoleMenuRouterTree 获取角色菜单路由树形列表
 	ListUserRoleMenuRouterTree(context.Context, *ListUserRoleMenuRouterTreeReq) (*ListUserRoleMenuRouterTreeReply, error)
-	// ListUserRoleMenuTree 获取角色菜单路由树形列表
 	ListUserRoleMenuTree(context.Context, *ListUserRoleMenuTreeReq) (*ListUserRoleMenuTreeReply, error)
-	// ListUserRolePermission 获取角色权限列表
 	ListUserRolePermission(context.Context, *ListUserRolePermissionReq) (*ListUserRolePermissionReply, error)
-	// Login 密码登陆
 	Login(context.Context, *LoginReq) (*LoginReply, error)
-	// Logout 登出
 	Logout(context.Context, *emptypb.Empty) (*LogoutReply, error)
-	// Register 注册
 	Register(context.Context, *RegisterReq) (*RegisterReply, error)
-	// SmsLogin 短信登陆
 	SmsLogin(context.Context, *SmsLoginReq) (*LoginReply, error)
-	// UpdateDept 修改部门
 	UpdateDept(context.Context, *UpdateDeptReq) (*UpdateDeptReply, error)
-	// UpdateDomain 修改领域
 	UpdateDomain(context.Context, *UpdateDomainReq) (*UpdateDomainReply, error)
-	// UpdateDomainState 设置领域状态
 	UpdateDomainState(context.Context, *UpdateDomainStateReq) (*UpdateDomainStateReply, error)
-	// UpdateMenu 修改菜单
 	UpdateMenu(context.Context, *UpdateMenuReq) (*UpdateMenuReply, error)
-	// UpdatePost 修改职位
 	UpdatePost(context.Context, *UpdatePostReq) (*UpdatePostReply, error)
-	// UpdatePostState 设置领域状态
 	UpdatePostState(context.Context, *UpdatePostStateReq) (*UpdatePostStateReply, error)
-	// UpdateResource 修改资源
 	UpdateResource(context.Context, *UpdateResourceReq) (*UpdateResourceReply, error)
-	// UpdateRole 修改角色
 	UpdateRole(context.Context, *UpdateRoleReq) (*UpdateRoleReply, error)
-	// UpdateRoleState 设置领域状态
 	UpdateRoleState(context.Context, *UpdateRoleStateReq) (*UpdateRoleStateReply, error)
-	// UpdateUser 修改用户
 	UpdateUser(context.Context, *UpdateUserReq) (*UpdateUserReply, error)
 }
 
@@ -242,6 +179,7 @@ func RegisterApiHTTPServer(s *http.Server, srv ApiHTTPServer) {
 	r.POST("/v1/domains", _Api_CreateDomain0_HTTP_Handler(srv))
 	r.GET("/v1/domains/{id}", _Api_GetDomain0_HTTP_Handler(srv))
 	r.GET("/v1/domains/{code}/code", _Api_GetDomainCode0_HTTP_Handler(srv))
+	r.GET("/v1/domains/{name}/name", _Api_GetDomainName0_HTTP_Handler(srv))
 	r.PUT("/v1/domains/{id}", _Api_UpdateDomain0_HTTP_Handler(srv))
 	r.DELETE("/v1/domains/{id}", _Api_DeleteDomain0_HTTP_Handler(srv))
 	r.PUT("/v1/domains/{id}/state", _Api_UpdateDomainState0_HTTP_Handler(srv))
@@ -864,6 +802,28 @@ func _Api_GetDomainCode0_HTTP_Handler(srv ApiHTTPServer) func(ctx http.Context) 
 		http.SetOperation(ctx, OperationApiGetDomainCode)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
 			return srv.GetDomainCode(ctx, req.(*GetDomainCodeReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*Domain)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Api_GetDomainName0_HTTP_Handler(srv ApiHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetDomainNameReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationApiGetDomainName)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetDomainName(ctx, req.(*GetDomainNameReq))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
@@ -1733,6 +1693,7 @@ type ApiHTTPClient interface {
 	GetDept(ctx context.Context, req *GetDeptReq, opts ...http.CallOption) (rsp *Dept, err error)
 	GetDomain(ctx context.Context, req *GetDomainReq, opts ...http.CallOption) (rsp *Domain, err error)
 	GetDomainCode(ctx context.Context, req *GetDomainCodeReq, opts ...http.CallOption) (rsp *Domain, err error)
+	GetDomainName(ctx context.Context, req *GetDomainNameReq, opts ...http.CallOption) (rsp *Domain, err error)
 	GetMenu(ctx context.Context, req *GetMenuReq, opts ...http.CallOption) (rsp *Menu, err error)
 	GetPost(ctx context.Context, req *GetPostReq, opts ...http.CallOption) (rsp *Post, err error)
 	GetResource(ctx context.Context, req *GetResourceReq, opts ...http.CallOption) (rsp *Resource, err error)
@@ -2024,6 +1985,19 @@ func (c *ApiHTTPClientImpl) GetDomainCode(ctx context.Context, in *GetDomainCode
 	pattern := "/v1/domains/{code}/code"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationApiGetDomainCode))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
+}
+
+func (c *ApiHTTPClientImpl) GetDomainName(ctx context.Context, in *GetDomainNameReq, opts ...http.CallOption) (*Domain, error) {
+	var out Domain
+	pattern := "/v1/domains/{name}/name"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationApiGetDomainName))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
